--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,127 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background-color: rgb(235,235,235);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.row{
+    display: flex;
+}
+.col{
+    flex-direction: column;
+}
+
+
+main h2{
+    margin: 4px 0;
+    font-size: 1.2em;
+}
+
+
+/* СВОЙСТВА */
+/* .properties-section{
+
+} */
+.properties-section-title{
+    margin: 6px 0;
+}
+.property{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 10px;
+}
+.property span{
+    margin-right: 0.5em;
+}
+.property-title{
+    margin: 0;
+    font-size: 1em;
+    font-weight: normal;
+}
+.property-info{
+    margin-left: 1.5em;
+}
+
+.listbox{
+    border: 1px solid silver;
+    list-style: none;
+    
+    padding-left: 2px;
+    overflow: auto;
+    max-height: 24em;
+    user-select: none;
+}
+/* .list-item{
+
+} */
+.list-item:hover{
+    cursor: pointer;
+    background-color: rgb(213, 238, 253);
+}
+.list-item.selected{
+    background-color: lightblue;
+}
+
+
+textarea.textbox{
+    width: 96%;
+    height: 96%;
+    max-height: 100%;
+    max-width: 100%;
+}
+
+/* ВКЛАДКИ */
+
+.tab-menu{
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    border-bottom: 1px solid gainsboro;
+    user-select: none;
+}
+.tab-menu.reforged{
+    border-radius: 4px;
+}
+.tab-menu .item{
+    padding: 2px 4px;
+    border:1px solid rgb(235,235,235);
+    background-color: whitesmoke;
+}
+.tab-menu.reforged .item{
+    border-bottom: 3px solid gainsboro;
+    display: flex;
+    align-items: center;
+}
+.tab-menu.reforged .item img{
+    margin: 1px 4px;
+    height: 16px;
+}
+
+.tab-menu .item.selected{
+    background-color: white;
+    border-color: silver;
+}
+.tab-menu.reforged .item.selected{
+    background-color: transparent;
+    border-bottom: 3px solid orange;
+}
+.tab-menu .item:hover{
+    cursor: default;
+    background-color: rgb(235,235,235);
+}
+.tab-menu.reforged .item:hover{
+    
+}
+
+
+.info{
+    transition-property: opacity;
+    transition-duration: 0.6s;
+    color: green;
+    user-select: none;
+}
+p.info{
+    margin: 5px 0;
+}
