Пара фиксов, добавление ссылок

--- a/src/app/about.component.html
+++ b/src/app/about.component.html
@@ -72,9 +72,9 @@
             наблюдайте за новостями...
         </p>
         <ul>
-            <li><a>Репозиторий версии Reforged (2021+)</a></li>
+            <li><a href="https://github.com/Alleaxx/RumineSimReforged">Репозиторий версии Reforged (2021+)</a></li>
             <li><a>Восстановленный репозиторий версии 1.0 (2016)</a></li>
-            <li><a>Оригинальный репозиторий версии 2.0 (2016-2017)</a></li>
+            <li><a href="https://github.com/Alleaxx/RS-2.0">Оригинальный репозиторий версии 2.0 (2016-2017)</a></li>
         </ul>
     </section>
 
