--- a/src/app/reforged.component.html
+++ b/src/app/reforged.component.html
@@ -13,16 +13,14 @@
         </ul>
     </nav>
     
-    <div class="simulator-content" [ngSwitch]=[selectedTab]>
-
-        <ng-template ngSwitchCase="1">
+    <div class="simulator-content" [ngSwitch]="selectedTab">
+        <ng-template [ngSwitchCase]="1">
             <activity></activity>
         </ng-template>
 
-        <ng-template ngSwitchCase="2">
+        <ng-template [ngSwitchCase]="2">
             <users></users>
-        </ng-template>
-        
+        </ng-template>  
     </div>
     
 </div>
